# 5080train

./: .gitignore  2DCNN测试-三阶段数据集-3到7层-强化标量融合-进一步优化.py  2DCNN测试-三阶段数据集-3到7层-强化标量融合.py  2DCNN测试-三阶段数据集-3到7层.py  floors_3_to_7_utils.py  floors_3_to_8_utils.py  git-commit-push.ps1  git-pull-merge.ps1  pyproject.toml  setup-env.bat  setup-env.cmd  setup-env.ps1  uv-cache-archive-report.csv  代理模型发论文指标文献调研.md  传统ML与MLP代理模型对比实现方案.md  启动测试.bat  启动训练.bat  多模态-2DCNN-三阶段数据集-3到7层-强化标量融合-进一步优化.py  多模态-2DCNN-三阶段数据集-3到7层-强化标量融合.py  多模态-2DCNN-三阶段数据集-3到7层.py  拉取与合并.bat  提交并推送.bat
2dcnnv1/: 2dcnnv1.py  2dcnnv1test.py  启动测试.bat  启动训练.bat
2dcnnv2/: 2dcnnv2.py  2dcnnv2test.py  启动测试.bat  启动训练.bat
2dcnnv3/: 2dcnnv3.py  2dcnnv3test.py  启动测试.bat  启动训练.bat
2dcnnv4/: 2dcnnv4.py  2dcnnv4test.py  启动测试.bat  启动训练.bat
2dcnnv5/: 2dcnnv5.py  2dcnnv5test.py  启动测试.bat  启动训练.bat
2dcnnv6/: 2dcnnv6ensemble.py  启动融合评估.bat
history/: 2dcnnv2-vs-v3-训练对比总结.md  2dcnnv2-强化标量融合改动说明.md  2dcnnv2-强化标量融合继续优化记录.md  2dcnnv3-进一步优化改动说明.md  2dcnnv4-核心区间优化说明.md  2dcnnv5-保留尾部并增强低漂移优化说明.md  2dcnn版本经验总结与v6融合优化说明.md
数据集/: opensees_surrogate_dataset_floors_3_to_7_3stage-tailfix-steel01main-steel02damper-light-grid6-fy5-fy500to8000-period09-m50to140-ydr1p0-20260523-171351_summary.json  opensees_surrogate_dataset_floors_3_to_7_3stage-tailfix-steel01main-steel02damper-light-grid6-fy5-fy500to8000-period09-m50to140-ydr1p0-20260523-171351_val.csv  opensees_surrogate_dataset_floors_3_to_7_3stage-tailfix-steel01main-steel02damper-light-grid6-fy5-fy500to8000-period09-m50to140-ydr1p0-20260523-171351_wave_features.csv  (+1 more)
(+282 files in other folders)
